--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/styles/styles.css">
-</head>
+<head th:replace="~{head :: head('Tarefas Atuais')}"></head>
 
 <body class="container pt-5">
-    <form action="/tasks" method="POST">
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Nome da tarefa</label>
-            <input name="name" type="text" class="form-control" id="exampleFormControlInput1"
-                placeholder="Nome da tarefa a ser executada">
+    <div th:replace="~{head :: header('Tarefas')}">
+
+    </div>
+    <div class="card m-2" th:each="task: ${tasks}">
+        <div class=" card-header">
+            <div class="row">
+                <div class="col-6">
+                    <h5 th:text="${task.name}"></h5>
+                </div>
+                <div class="col-6 text-end">
+                    <a class="text-decoration-none" th:href="@{'tasks/editar/' + ${task.id}}">
+                        <img class="me-2" src="https://img.icons8.com/ios/50/null/edit-row.png" style="height: 26px;" />
+                    </a>
+                    <a class="text-decoration-none" th:href="@{'tasks/delete/' + ${task.id}}">
+                        <img src="https://img.icons8.com/ios-filled/50/null/delete-trash.png" style="height: 23px;" />
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Descrição</label>
-            <textarea name="description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            <button type="submit" class="btn btn-primary mt-2">Go somewhere</button>
-        </div>
-    </form>
-    <div class="card" th:each="task: ${tasks}">
-        <div class="card-header" th:text="${task.name}">
-        </div>
+
         <div class="card-body" th:text="${task.description}">
         </div>
+
+
+
     </div>
+
 </body>
 
 </html>
